# BossPackage

./: pyproject.toml
boss/: cog.py  collector.json
